@@ -9,8 +9,8 @@ dependencies {
     implementation(project(":ktorm-core"))
     implementation(project(":ktorm-ksp-annotations"))
     implementation(project(":ktorm-ksp-spi"))
-    implementation("com.google.devtools.ksp:symbol-processing-api:1.9.23-1.0.20")
-    implementation("com.squareup:kotlinpoet-ksp:1.11.0")
+    implementation("com.google.devtools.ksp:symbol-processing-api:2.3.4")
+    implementation("com.squareup:kotlinpoet-ksp:2.0.0")
     implementation("org.atteo:evo-inflector:1.3")
 //    implementation("com.pinterest.ktlint:ktlint-rule-engine:1.3.0") {
 //        exclude(group = "org.jetbrains.kotlin", module = "kotlin-compiler-embeddable")
@@ -19,14 +19,10 @@ dependencies {
 //        exclude(group = "org.jetbrains.kotlin", module = "kotlin-compiler-embeddable")
 //    }
 
-    testImplementation("com.github.tschuchortdev:kotlin-compile-testing:1.5.0")
-    testImplementation("com.github.tschuchortdev:kotlin-compile-testing-ksp:1.5.0")
-    testImplementation("com.h2database:h2:1.4.198")
-    testImplementation("org.slf4j:slf4j-simple:2.0.3")
+    testImplementation("dev.zacsweers.kctfork:core:0.12.0")
+    testImplementation("dev.zacsweers.kctfork:ksp:0.12.0")
+    testImplementation("com.h2database:h2:2.3.232")
+    testImplementation("org.slf4j:slf4j-simple:2.0.16")
 }
 
-if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
-    tasks.test {
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
-}
+
